# neoSCAN

./: .gitignore  CLAUDE.md  README.md  REQ.md  main.py  neoscan.spec  pyproject.toml
.github/workflows/: release.yml
app/audio/: languages.py  recorder.py  summary_generator.py  summary_scheduler.py  transcriber.py  transcript_writer.py
app/data/: band_plan.py  file_996.py  file_csv.py  models.py  radio_connection.py
app/serial/: port_manager.py  protocol.py  scanner_model.py
app/ui/: main_window.py
app/ui/editor/: channel_editor.py  csv_import_dialog.py  systems_panel.py  trunk_site_import_dialog.py
app/ui/programmer/: download_dialog.py  upload_dialog.py
app/ui/remote_control/: control_panel.py  log_panel.py
app/ui/settings/: preferences_dialog.py  settings_dialog.py
sample-data/: CommonFederalFreq.csv  MAStatePoliceSites.csv  MAStatePoliceTalkGroups.csv  march-lineup.996  sample.996
tests/: test_file_996.py
tools/: generate_icons.py
