[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neo-scan"
version = "0.1.0"
description = "Cross-platform desktop app for programming Uniden BCT15-X radio scanners"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[project.scripts]
neo-scan = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
